# nit_os

./: .gitmodules  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  README.md  ROADMAP.md  TODO.md  make.toml
.cargo/: config
.github/workflows/: build_binary.yml  build_release.yml  cargo-make.yml  make.yml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  tempCodeRunnerFile.rs  vga.rs
src/architecture/: mod.rs
src/architecture/amd64/: mod.rs
src/architecture/qemu/: mod.rs
src/architecture/testing/: mod.rs
src/drivers/: cmos.rs  mod.rs  serial.rs  vga.rs
src/interrupts/: exceptions.rs  gdt.rs  hardware.rs  idt.rs  mod.rs
src/memory/: allocators.rs  frame_alloc.rs  heap.rs  heap_alloc.rs  mapping.rs  mod.rs
src/memory/allocators/: bump.rs  fixed_size_blocks.rs  linked_list.rs  mod.rs
src/utils/: mod.rs  vga.rs
tests/: basic_boot.rs  heap_allocations.rs  should_panic.rs  stack_overflow.rs
