[package]
name = "nit_os"
version = "0.1.0"
authors = ["aunetx <aunetx@yandex.com>"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = "0.8.8"
volatile = "0.2.6"
lazy_static = {version ="1.4.0",features = ["spin_no_std"]}
spin = "0.5.2"
x86_64 = "0.9.5"
uart_16550 = "0.2.4"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33