[package]
name = "nit_os"
version = "0.1.0"
authors = ["aunetx <aunetx@yandex.com>"]
edition = "2018"

[features]
default = ["amd64", "qemu"]
amd64 = []
qemu = []

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]

# mandatory
bootloader = { version = "0.9.0", features = ["map_physical_memory"]}
lazy_static = {version ="1.4.0", features = ["spin_no_std"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.9.6"

# helpers
linked_list_allocator = "0.8.1"
cpuio = "0.2.0"

# hardware-dependent
uart_16550 = "0.2.4"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"


[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
# add the "-S" option to stop on opening (to continue with qemu)
run-args = ["-s"]
test-success-exit-code = 33

[profile.release]
lto = true